--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
     "main": "index.js",
     "scripts": {
         "start": "node server/server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
+        "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.test.js",
+        "test-watch": "nodemon --exec \"npm test\""
+    },    
     "engines": {
-        "node": "9.2.0"
+        "node": "9.4.0"
     },
     "author": "Brian Hunley",
     "license": "ISC",
