--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
         "start": "node server/server.js",
         "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.test.js",
         "test-watch": "nodemon --exec \"npm test\""
-    },    
+    },
     "engines": {
         "node": "9.4.0"
     },
     "author": "Brian Hunley",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.16.2"
+        "express": "^4.16.2",
+        "socket.io": "^2.0.4"
     }
 }
